--- a/.env
+++ b/.env
@@ -51,8 +51,10 @@ MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=servicioalcliente@intalnet.com
+MAIL_PASSWORD=ezbckkiqbnewekqo
+MAIL_ENCRYPTION=tls
+
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
